doc atualizado a documentaçao do proejeto